...
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_back">Go Back</string>
    <string name="add_note">ADD NOTE</string>
    <string name="name">Name</string>
    <string name="confirm_name">CONFIRM</string>
    <string name="add_course">ADD COURSE</string>
    <string name="done">DONE</string>
    <string name="apply_sort">SORT</string>
    <string name="subject">Subject</string>
    <string name="course_number">Course</string>
    <string-array name="quarter">
        <item>FA</item>
        <item>WI</item>
...
    <string-array name="sort">
        <item>Most Shared Classes</item>
        <item>Most Recent Classes</item>
        <item>Smallest Classes</item>
    </string-array>
    <string name="year">Year</string>
    <string name="submit_url">SUBMIT</string>
    <string name="url_instruction">Submit URL to a headshot of yourself</string>
    <string name="Text_box">Paste CSV</string>
    <string name="bofs_button">Get Bofs</string>
</resources>
